# Dreamcast-C-studying

./: CMakeLists.txt  main.c
inst/include/: dr.h
